tests/elab/mvcgenSymBlock.lean
import Std.Tactic.Do

/-! Tests that `mvcgen'` is usable as a step inside `sym => ‚Ä¶` blocks. -/

open Std.Do

set_option mvcgen.warning false

/-! ## Trivial postcondition: `mvcgen'` closes the goal -/

axiom G : StateM Nat Unit
axiom H : StateM Nat Unit

noncomputable def F : StateM Nat Unit := do
  G
  H

@[spec]
axiom G_spec : ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą G ‚¶É‚áď _ n => ‚Ćún = n‚ĆĚ‚¶Ą

@[spec]
axiom H_spec : ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą H ‚¶É‚áď _ n => ‚Ćún = n‚ĆĚ‚¶Ą

example : ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą F ‚¶É‚áď _ n => ‚Ćún = n‚ĆĚ‚¶Ą := by
  sym =>
    mvcgen' [F]

/-! ## Pre-tactic dispatches the leftover VC -/

axiom G2 : StateM Nat Unit
axiom H2 : StateM Nat Unit

noncomputable def F2 : StateM Nat Unit := do
  G2
  H2

axiom P : Nat ‚Üí Prop

@[spec]
axiom G2_spec : ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą G2 ‚¶É‚áď _ n => ‚ĆúP n‚ĆĚ‚¶Ą

@[spec]
axiom H2_spec : ‚¶Éfun n => ‚ĆúP n‚ĆĚ‚¶Ą H2 ‚¶É‚áď _ n => ‚ĆúTrue‚ĆĚ‚¶Ą

example : ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą F2 ‚¶É‚áď _ n => ‚ĆúTrue‚ĆĚ‚¶Ą := by
  sym =>
    mvcgen' [F2] with grind

/-! ## VC leftover; closed by a subsequent grind step -/

axiom G3 : StateM Nat Unit
axiom H3 : StateM Nat Unit

noncomputable def F3 : StateM Nat Unit := do
  G3
  H3

axiom Q : Nat ‚Üí Prop
axiom hPQ : ‚ąÄ n, P n ‚Üí Q n

@[spec]
axiom G3_spec : ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą G3 ‚¶É‚áď _ n => ‚ĆúP n‚ĆĚ‚¶Ą

@[spec]
axiom H3_spec : ‚¶Éfun n => ‚ĆúQ n‚ĆĚ‚¶Ą H3 ‚¶É‚áď _ n => ‚ĆúTrue‚ĆĚ‚¶Ą

example : ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą F3 ‚¶É‚áď _ n => ‚ĆúTrue‚ĆĚ‚¶Ą := by
  sym =>
    mvcgen' [F3]
    finish [hPQ]

-- `sym [hPQ]` propagates to the new VC `Grind.Goal`s; no need to re-pass it.
example : ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą F3 ‚¶É‚áď _ n => ‚ĆúTrue‚ĆĚ‚¶Ą := by
  sym [hPQ] =>
    mvcgen' [F3]
    finish

/-! ## VC references an fvar introduced by `mvcgen'` -/

axiom G4 : StateM Nat Nat
axiom Q4 : Nat ‚Üí Prop
axiom hPQ4 : ‚ąÄ n, P n ‚Üí Q4 n

@[spec]
axiom G4_spec : ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą G4 ‚¶É‚áď x _ => ‚ĆúP x‚ĆĚ‚¶Ą

noncomputable def F4 : StateM Nat Nat := do
  let x ‚Üź G4
  pure x

-- `mvcgen'` introduces `x` and a hypothesis `P x` into the VC's local context.
-- The subsequent `finish [hPQ4]` must see `P x` in the E-graph to derive `Q4 x`.
example : ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą F4 ‚¶É‚áď r _ => ‚ĆúQ4 r‚ĆĚ‚¶Ą := by
  sym =>
    mvcgen' [F4]
    finish [hPQ4]

-- `clear hk` drops `hk` from the lctx; `hk2` remains as a proof of `k = 0`. If
-- `PreTac.run`'s `.tactic` branch inherited the parent `Grind.Goal` instead of
-- building fresh ones, the E-graph (populated by `internalize_all`) would keep
-- the now-dead `hk` fvar; `finish` constructs a proof citing it and the kernel
-- rejects with `unknown free variable`.
example (k : Nat) (hk : k = 0) (hk2 : k = 0) : ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą F4 ‚¶É‚áď _ _ => ‚Ćúk = 0‚ĆĚ‚¶Ą := by
  sym =>
    internalize_all
    mvcgen' [F4] with (clear hk)
    finish

/-! ## Inline invariants (bullet form) inside `sym =>` -/

example :
    ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą
    (do
      let mut x := 0
      for i in [1:5] do
        x := x + i
      pure x : Id Nat)
    ‚¶É‚áďr => ‚Ćúr < 30‚ĆĚ‚¶Ą := by
  sym =>
    mvcgen' invariants
      ¬∑ ‚áď(xs, r) => ‚Ćúr + xs.suffix.length * 5 ‚Č§ 25‚ĆĚ
    with (simp_all; try grind)

/-! ## `invariants?` (suggest mode) is rejected inside `sym =>` -/

/--
error: `mvcgen' invariants?` (suggest mode) is not supported inside `sym => ‚Ä¶` blocks
-/
#guard_msgs in
example : ‚¶É‚ĆúTrue‚ĆĚ‚¶Ą F ‚¶É‚áď _ n => ‚Ćún = n‚ĆĚ‚¶Ą := by
  sym =>
    mvcgen' [F] invariants?
